Fix spacing

--- a/content/assets/stylesheets/application.scss
+++ b/content/assets/stylesheets/application.scss
@@ -879,7 +879,7 @@ article#institute {
   }
 
   section.care_2 {
-    padding: 20px 0px 20px 20px;
+    padding: 0px 0px 40px 20px;
 
     .empty_title {
       color: $white;
